# fastvote

./: .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: .releaserc-backend.json  .releaserc-frontend.json  backend.yml  frontend.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/models/: schemas.py
backend/app/routers/: health.py  rooms.py  websocket.py
backend/app/services/: comment.py  room.py  vote.py
backend/app/utils/: security.py
backend/tests/: test_health.py  test_restricted_vote_participants.py
docs/: README.md  api.md  architecture.md  getting-started.md  project-structure.md  tech-stack.md
frontend/: .dockerignore  .env.example  DESIGN_NOTES.md  Dockerfile  QUICKSTART.md  README.md  VOTING_PAGE.md  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/create/: layout.tsx  page.tsx
frontend/app/create/restricted/: page.tsx
frontend/app/my-polls/: layout.tsx  my-polls.tsx  page.tsx
frontend/app/polls/: layout.tsx  my-polls.tsx  page.tsx  poll-filters.tsx
frontend/app/vote/[uuid]/: page.tsx  (+1 more)
frontend/components/providers/: app-providers.tsx  locale-provider.tsx
frontend/components/site/: create-mode-dialog.tsx  navbar.tsx  theme-toggle.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  separator.tsx  textarea.tsx  tooltip.tsx
frontend/lib/: api.ts  fingerprint.ts  i18n.ts
frontend/tests/: locale-theme.spec.ts
